# Stanley-Contoller-ROS

./: CMakeLists.txt  README.md  package.xml
include/: rosInterface.h  stanley.h
src/: rosInterface.cpp  stanley.cpp  stanley_node.cpp
stanley_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
stanley_ws/devel/lib/beginner_tutorials/: stanley_node
stanley_ws/devel/lib/pkgconfig/: beginner_tutorials.pc
stanley_ws/devel/lib/python3/dist-packages/beginner_tutorials/msg/: __init__.py
stanley_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
stanley_ws/devel/share/common-lisp/ros/beginner_tutorials/msg/: _package.lisp  beginner_tutorials-msg.asd
stanley_ws/devel/share/gennodejs/ros/beginner_tutorials/msg/: _index.js
stanley_ws/devel/share/roseus/ros/beginner_tutorials/: manifest.l
stanley_ws/src/beginner_tutorials/: CMakeLists.txt
stanley_ws/src/beginner_tutorials/src/: subscriber_node.cpp
